--- a/10-udagram-app/serverless.yml
+++ b/10-udagram-app/serverless.yml
@@ -49,6 +49,7 @@ provider:
     - Effect: Allow
       Action:
         - dynamodb:Query
+        - dynamodb:PutItem
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}
     - Effect: Allow
       Action:
@@ -93,6 +94,20 @@ functions:
           method: get
           path: images/{imageId}
           cors: true
+
+  CreateImage:
+    handler: src/lambda/http/createImage.handler
+    events:
+      - http:
+          method: post
+          path: images
+          cors: true
+          reqValidatorName: RequestBodyValidator
+            documentation:
+              summary: Create a new image
+              description: Create a new image
+              requestModels:
+                'application/json': ImageRequest
 
 resources:
   Resources:
