--- a/10-udagram-app/serverless.yml
+++ b/10-udagram-app/serverless.yml
@@ -18,6 +18,9 @@ custom:
       - name: GroupRequest
         contentType: application/json
         schema: ${file(models/create-group-request.json)}
+      - name: ImageRequest
+        contentType: application/json
+        schema: ${file(models/create-image-request.json)}
 
 # Add the serverless-webpack plugin
 plugins:
@@ -54,6 +57,7 @@ provider:
     - Effect: Allow
       Action:
         - dynamodb:Query
+        - dynamodb:PutItem
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}/index/${self:provider.environment.IMAGE_ID_INDEX}
 
 functions:
@@ -100,14 +104,14 @@ functions:
     events:
       - http:
           method: post
-          path: images
+          path: groups/{groupId}/images
           cors: true
           reqValidatorName: RequestBodyValidator
-            documentation:
-              summary: Create a new image
-              description: Create a new image
-              requestModels:
-                'application/json': ImageRequest
+          documentation:
+            summary: Create a new image
+            description: Create a new image
+            requestModels:
+              'application/json': ImageRequest
 
 resources:
   Resources:
